--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -43,48 +43,48 @@ content="text/html;charset=utf-8" />
 						     <h3 class="textHeaderLabel">Asphodelaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a>	$8<hr>
-<a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a>	$10<hr>
-<a href="pics/plants/asp!haworthia!acuminata!14.JPG">Haworthia acuminata</a>	$14<hr>
-<a href="pics/plants/asp!haworthia!cv. 'Yukigeshiki'!18.JPG">Haworthia cv. 'Yukigeshiki'</a>	$18<hr>
-<a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a>	$8<hr>
-<a href="pics/plants/asp!haworthiopsis!attenuata v. radula!8.JPG">Haworthiopsis attenuata v. radula</a>	$8<hr>
-<a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a>	$8<hr>
-<a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a>	$8<hr>
-<a href="pics/plants/asp!haworthiopsis!cf. attenuata x limifolia!10.JPG">Haworthiopsis cf. attenuata x limifolia</a>	$10<hr>
-<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6.JPG">Haworthiopsis coarctata v. chulamnensis</a>	$6<hr>
-<a href="pics/plants/asp!haworthiopsis!limifolia f. variegata!18.JPG">Haworthiopsis limifolia f. variegata</a>	$18<hr>
-<a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a>	$8<hr>
-<a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a>	$38<hr>
-<a href="pics/plants/asp!tulista!pumila!14.JPG">Tulista pumila</a>	$14<hr>
-<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a>	$8</ul>
+					 	<ul><a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a>&nbsp;|&nbsp;$10<hr>
+<a href="pics/plants/asp!haworthia!acuminata!14.JPG">Haworthia acuminata</a>&nbsp;|&nbsp;$14<hr>
+<a href="pics/plants/asp!haworthia!cv. 'Yukigeshiki'!18.JPG">Haworthia cv. 'Yukigeshiki'</a>&nbsp;|&nbsp;$18<hr>
+<a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. radula!8.JPG">Haworthiopsis attenuata v. radula</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!haworthiopsis!cf. attenuata x limifolia!10.JPG">Haworthiopsis cf. attenuata x limifolia</a>&nbsp;|&nbsp;$10<hr>
+<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6.JPG">Haworthiopsis coarctata v. chulamnensis</a>&nbsp;|&nbsp;$6<hr>
+<a href="pics/plants/asp!haworthiopsis!limifolia f. variegata!18.JPG">Haworthiopsis limifolia f. variegata</a>&nbsp;|&nbsp;$18<hr>
+<a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a>&nbsp;|&nbsp;$38<hr>
+<a href="pics/plants/asp!tulista!pumila!14.JPG">Tulista pumila</a>&nbsp;|&nbsp;$14<hr>
+<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a>&nbsp;|&nbsp;$8</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a>	$10<hr>
-<a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a>	$8<hr>
-<a href="pics/plants/cac!maihueniopsis!molinensis!15.JPG">Maihueniopsis molinensis</a>	$15<hr>
-<a href="pics/plants/cac!melocactus!mantazanus!18.JPG">Melocactus mantazanus</a>	$18<hr>
-<a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a>	$8<hr>
-<a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a>	$48<hr>
-<a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a>	$12<hr>
-<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>	$16</ul>
+					 	<ul><a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a>&nbsp;|&nbsp;$10<hr>
+<a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/cac!maihueniopsis!molinensis!15.JPG">Maihueniopsis molinensis</a>&nbsp;|&nbsp;$15<hr>
+<a href="pics/plants/cac!melocactus!mantazanus!18.JPG">Melocactus mantazanus</a>&nbsp;|&nbsp;$18<hr>
+<a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a>&nbsp;|&nbsp;$48<hr>
+<a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a>&nbsp;|&nbsp;$12<hr>
+<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>&nbsp;|&nbsp;$16</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Euphorbiaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/eup!euphorbia!baioensis!12.JPG">Euphorbia baioensis</a>	$12<hr>
-<a href="pics/plants/eup!euphorbia!griseola!12.JPG">Euphorbia griseola</a>	$12<hr>
-<a href="pics/plants/eup!euphorbia!heteropoda!10.JPG">Euphorbia heteropoda</a>	$10<hr>
-<a href="pics/plants/eup!euphorbia!species 1!10.JPG">Euphorbia species 1</a>	$10<hr>
-<a href="pics/plants/eup!euphorbia!species 2!8.JPG">Euphorbia species 2</a>	$8<hr>
-<a href="pics/plants/eup!euphorbia!species 3!12.JPG">Euphorbia species 3</a>	$12</ul>
+					 	<ul><a href="pics/plants/eup!euphorbia!baioensis!12.JPG">Euphorbia baioensis</a>&nbsp;|&nbsp;$12<hr>
+<a href="pics/plants/eup!euphorbia!griseola!12.JPG">Euphorbia griseola</a>&nbsp;|&nbsp;$12<hr>
+<a href="pics/plants/eup!euphorbia!heteropoda!10.JPG">Euphorbia heteropoda</a>&nbsp;|&nbsp;$10<hr>
+<a href="pics/plants/eup!euphorbia!species 1!10.JPG">Euphorbia species 1</a>&nbsp;|&nbsp;$10<hr>
+<a href="pics/plants/eup!euphorbia!species 2!8.JPG">Euphorbia species 2</a>&nbsp;|&nbsp;$8<hr>
+<a href="pics/plants/eup!euphorbia!species 3!12.JPG">Euphorbia species 3</a>&nbsp;|&nbsp;$12</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Portulacaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/por!anacampseros!rufescens!8.JPG">Anacampseros rufescens</a>	$8</ul>
+					 	<ul><a href="pics/plants/por!anacampseros!rufescens!8.JPG">Anacampseros rufescens</a>&nbsp;|&nbsp;$8</ul>
 					</div></ul>
 					</div>
 					</li>
